제품 사진, 상세 사진 업로드 기능 완료